--- a/app/views/notifications/_notification.html.haml
+++ b/app/views/notifications/_notification.html.haml
@@ -1,7 +1,7 @@
 - begin
   - if ["new_discussion", "new_comment", 'new_motion'].include?(notification.event_kind)
-    - event = notification.event.decorate
-    - href = event.eventable_path
+    - event = notification.event
+    - href = event.linkable_resource
     - user = event.actor
     - action_text = event.action_text
     - title_text = event.title
