--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -89,7 +89,7 @@ body.discussions.show {
     width: 230px;
   }
 
-  .discussion-author-info {
+  .discussion-additional-info {
     font-size: $font-small;
     color: $mid-grey;
     width: 170px;
