--- a/app/views/discussions/show_description_history.js.erb
+++ b/app/views/discussions/show_description_history.js.erb
@@ -5,5 +5,5 @@ if(modal.is(":hidden")){
   modal.modal('show')
 }
 
-modal.html("<%= escape_javascript(render 'description_history', model: @discussion, model_name: 'discussion')%>")
+modal.html("<%= escape_javascript(render 'description_history')%>")
 modal.find("a.disabled").bind('click', false)
