--- a/app/views/discussions/_discussion_context.html.haml
+++ b/app/views/discussions/_discussion_context.html.haml
@@ -8,11 +8,15 @@
     .discussion-additional-info
       = "Started #{time_ago_in_words(@discussion.created_at)} ago"
       .started-by
-        = "By #{@discussion.originator}"
+        = "By "
         =link_to @discussion.author.name, "#", "title" => @discussion.author.name,
           "data-content" => "#{render 'users/name_popover', user: @discussion.author, group: @discussion.group}",
           class: "user-name-with-popover"
-      .last-edited-by
-        = "By "
-      .see-revision-history
-        =link_to "See revision history", show_description_history_discussion_path(@discussion), :method => :post, :class => "see-description-history", :remote => true
+      -if defined? @last_collaborator
+        .last-edited-by
+          = "Last edited by "
+          =link_to @last_collaborator.name, "#", "title" => @last_collaborator.name,
+            "data-content" => "#{render 'users/name_popover', user: @last_collaborator, group: @discussion.group}",
+            class: "user-name-with-popover"
+        .see-revision-history
+          =link_to "See revision history", show_description_history_discussion_path(@discussion), :method => :post, :class => "see-description-history", :remote => true
