added discussion title + minor styling change

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -52,6 +52,10 @@ h5 {
   font-size: $font-tiny;
 }
 
+.font-size-85pc{
+  font-size: 85%;
+}
+
 // structural elements (containers etc.)
 .inner-container { margin-top: 70px; }
 .group-link.clearfix {
