demoted restore button

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -118,7 +118,7 @@ body.discussions.show {
       text-decoration: none;
     }
   }
-  .user-profile-fields {
+  .revision-title {
     width: 450px;
     float: left;
   }
